--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="passport photo.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>Pranesh S</h1>
-            <p>Am Mechanical Engineer</p>
+            <img src="351.jpg" alt="Your Profile Picture" class="profile-picture">
+            <h1>sandhiya</h1>
+            <p>bca</p>
         </div>
     </header>
 
@@ -127,8 +127,8 @@
 
     <section id="education">
         <div class="section-content">
-            <h2>Education</h2>
-            <p>Deemed University  - Mech</p>
+            <h2>univarsity of madras</h2>
+            <p>bca</p>
             
             
         </div>
@@ -176,7 +176,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Pranesh S</p>
+        <p>&copy; 2025 sandhiya </p>
     </footer>
 
     <script>
