--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="351.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Photo.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>sandhiya</h1>
             <p>bca</p>
         </div>
@@ -146,7 +146,7 @@
         <div class="section-content">
             <center>
             <h2>Sandhiya-E</h2>
-            <a href="file.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="Resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
